--- a/pluginmodule/src/main/res/layout/activity_main.xml
+++ b/pluginmodule/src/main/res/layout/activity_main.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:gravity="center">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="我是插件Activity1,我的启动模式SingleTask"
+        android:layout_marginBottom="20dp"/>
 
     <TextView
         android:id="@+id/plugin_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="我是插件Activity"
+        android:text="点我跳转到Activity2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/buttom_back"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
