--- a/pluginmodule/src/main/res/layout/activity_third.xml
+++ b/pluginmodule/src/main/res/layout/activity_third.xml
@@ -4,17 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ThirdActivity">
+    tools:context=".ThirdActivity"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/jump_host_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="点我跳转到宿主MainActivity"/>
+        android:textSize="20sp"
+        android:text="点我跳转到宿主的MainActivity"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/buttom_back"/>
 
     <TextView
         android:id="@+id/plugin_third_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="点我跳转插件TestActivity"/>
+        android:text="点我跳转插件Activity2"
+        android:background="@drawable/buttom_back"/>
 </LinearLayout>
