--- a/pluginmodule2/src/main/res/layout/activity_main.xml
+++ b/pluginmodule2/src/main/res/layout/activity_main.xml
@@ -4,31 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ThirdActivity"
+    android:orientation="vertical"
     android:gravity="center"
-    android:orientation="vertical">
+    tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/jump_host_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="我是插件2"
         android:textSize="20sp"
-        android:text="点我跳转到宿主的MainActivity"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/buttom_back"/>
-
-    <TextView
-        android:id="@+id/plugin_third_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="点我跳转插件Activity2"
-        android:background="@drawable/buttom_back"
         android:layout_marginBottom="20dp"/>
 
     <TextView
-        android:id="@+id/plugin_to_second_view"
+        android:id="@+id/go_back_plugin_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="点我跳转插件2"
+        android:text="点我返回到插件1的Activity1"
         android:background="@drawable/buttom_back"/>
+
 </LinearLayout>
