--- a/pluginmodule/src/main/res/layout/activity_main.xml
+++ b/pluginmodule/src/main/res/layout/activity_main.xml
@@ -12,14 +12,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:text="我是插件Activity1,我的启动模式SingleTask"
+        android:text="插件1"
+        android:layout_marginBottom="20dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="我是页面1"
         android:layout_marginBottom="20dp"/>
 
     <TextView
         android:id="@+id/plugin_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="点我跳转到Activity2"
+        android:text="点我跳转到插件1的页面2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
