--- a/pluginmodule/src/main/res/layout/activity_third.xml
+++ b/pluginmodule/src/main/res/layout/activity_third.xml
@@ -9,6 +9,20 @@
     android:orientation="vertical">
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="插件1"
+        android:layout_marginBottom="20dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="我是页面3"
+        android:layout_marginBottom="20dp"/>
+
+    <TextView
         android:id="@+id/jump_host_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,7 +35,7 @@
         android:id="@+id/plugin_third_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="点我跳转插件Activity2"
+        android:text="点我跳转到插件1的页面2"
         android:background="@drawable/buttom_back"
         android:layout_marginBottom="20dp"/>
 
@@ -29,6 +43,6 @@
         android:id="@+id/plugin_to_second_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="点我跳转插件2"
+        android:text="点我跳转到插件2！"
         android:background="@drawable/buttom_back"/>
 </LinearLayout>
